# mtp-transfer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: arguments.rs  error.rs  helpers.rs  main.rs  output.rs  types.rs
src/commands/: mod.rs  mtp.rs  sync.rs
src/mtp/: devices.rs  files.rs  mod.rs  storage.rs
src/mtp/utils/: detect.rs  filetree.rs  mod.rs
