[package]
name = "mtp-transfer"
version = "0.1.0"
authors = ["Morton Jonuschat <mjonuschat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bytefmt = "0.1.7"
clap = "3.0.0-beta.2"
indicatif = "0.15.0"
libmtp-rs = "0.7.7"
thiserror = "1.0.24"
